# slide-code

./: README.md  pyproject.toml
slide_code/: cli.py
